[feat] show all design projects in the same colors, [ui] reduce lecture spacing, turn off errors b/c bugs

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ input {
 	font-weight: 800;
 }
 .lecture {
-	margin: 1em 0;
+	margin: 0.4em 0;
 }
 .room {
 	display: inline-block;
